# eval-rs

./: Cargo.toml  README.md
doc/: notes.md
examples/: test_lexer.eva
mm/: Cargo.toml
src/: arena.rs  array.rs  bytecode.rs  callables.rs  compiler.rs  containers.rs  dict.rs  environment.rs  error.rs  function.rs  hashable.rs  headers.rs  heap.rs  lexer.rs  main.rs  memory.rs  outer_api.rs  pair.rs  parser.rs  pointerops.rs  primitives.rs  printer.rs  rawarray.rs  rawptr.rs  repl.rs  rooting.rs  safeptr.rs  safewrapper.rs  symbol.rs  symbolmap.rs  taggedptr.rs  text.rs  types.rs  vm.rs
src/attic/: callables.rs  rawptr.rs
